Fixes error on Golzar's computer
Turns out the comments bar, albeit invisible, was hanging over the
"begin" button at certain resolutions.

--- a/css/styles.css
+++ b/css/styles.css
@@ -341,7 +341,7 @@ z-index: 2;
 {
 position:fixed;
 top:0;
-left:-70%;
+left:-100%;
 height:100%;
 width:70%;
 min-width: 1000px;
